# synth-explorer

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  FABLE.md  PLAN.md  README.md  compose.prod.yml  vercel.json
.agent/: Repo.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-production.yml  monitor-production.yml  release-vivado-bridge.yml
analysis-core/: Cargo.toml
analysis-core/benches/: provenance.rs
analysis-core/src/: analysis.rs  delay_model.rs  design.rs  graph.rs  grouping.rs  lib.rs  netlist.rs  source_index.rs  source_provenance.rs
analysis-core/tests/: core.rs
analysis-wasm/: Cargo.toml  build.sh
analysis-wasm/src/: lib.rs
calibration/: Cargo.toml  README.md  cases.json  cells-2026.1.txt  cells.tcl  render-yosys-script.ts  speed_models.tcl  vivado-2026.1.json  vivado.tcl  vivado_edif.tcl
calibration/src/: main.rs
deploy/: Caddyfile  Dockerfile  compose.prod.yml  compose.vivado.yml
deploy/monitoring/: prometheus.yml
deploy/ops/: cloud-init.yml  deploy.sh  monitoring-smoke.sh  smoke-test.sh
docs/: API.md  ARCHITECTURE.md  BROWSER_WASM_BENCHMARKS.md  BROWSER_WASM_MIGRATION.md  OPERATIONS.md  PROVENANCE_INDEX_REWRITE.md  SOURCE_PROVENANCE_ARCHITECTURE.md  VHDL_GHDL.md  VHDL_GHDL_FEASIBILITY.md  VIVADO.md
examples/: 01_reg_mux.sv  02_priority_encoder.sv  03_adder_chain.sv  04_high_fanout_enable.sv  05_shared_logic.sv  06_comb_output.sv  07_blackbox.sv  08_fsm.sv  adder_chain.sv  async_fifo_blackbox.sv  fifo_pipe.sv  manifest.json  pipe.sv  priority_encoder_for.sv  round_robin_arbiter.sv  srl_pipe.sv
launcher/: Cargo.toml  README.md
launcher/src/: main.rs
layout-wasm/: Cargo.toml  build.sh
layout-wasm/src/: lib.rs
ops/: cloud-init.yml  deploy.sh  edge-smoke.sh  smoke-test.sh
ops/tests/: deploy-test.sh
rtl-correlate/: Cargo.toml
rtl-correlate/src/: correlate.rs  dialect.rs  lib.rs  netlist.rs  src_attr.rs
rtl-correlate/tests/: correlate.rs
server/: Cargo.toml
server/examples/: calibrate.rs
server/src/: analysis.rs  api.rs  delay_model.rs  design_store.rs  graph.rs  grouping.rs  lib.rs  main.rs  metrics.rs  netlist.rs  source_provenance.rs  synthesis.rs  vivado.rs  yosys.rs
server/tests/: api.rs  core.rs  examples.rs
server/tests/fixtures/: and_chain_rtl.json  children_scope.sv  comb_loop_rtl.json  high_fanout_enable_gates.json  pipe_clock_tree_xilinx.json  pipe_registers_only_xilinx.json  preflatten_scopes.json  reg_mux_rtl.json  vivado_report_timing_met.rpt  vivado_report_timing_no_paths.rpt  vivado_report_timing_unconstrained.rpt  vivado_report_timing_violated.rpt
tools/ghdl-wasm/: Dockerfile  README.md  blackbox-verilog.patch  bug.adb  build-in-container.sh  build.sh  ghdl_synth_test.mjs  grt-stdio.adb  grt-stdio.patch  synth_api.adb  synth_api.ads
tools/ghdl-wasm-spike/: README.md  b1_pipeline.mjs  ghdl_synth_test.mjs  line_directives.mjs  link-synth.sh  synth_api.adb  synth_api.ads  yosys_wasi_run.mjs
tools/yosys-wasm/: README.md  build.sh  wasi-sdk.cmake
vivado-bridge/: Cargo.toml  README.md
vivado-bridge/src/: lib.rs  main.rs
web/: .oxlintrc.json  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/benchmarks/: README.md  browser-migration.mjs
web/e2e/: capabilities.e2e.ts  card-layout.e2e.ts  computer-file-io.e2e.ts  download-launcher.e2e.ts  editor-input.e2e.ts  editor-theme.e2e.ts  engine-recovery.e2e.ts  exploration-contract.e2e.ts  helpers.ts  initial-paint.e2e.ts  local-vivado-launcher.e2e.ts  mobile-workspace.e2e.ts  production.e2e.ts  (+9 more)
(+258 files in other folders)
