[package]
name = "synth-explorer-analysis-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synth-explorer-analysis = { path = "../analysis-core" }
wasm-bindgen = "=0.2.122"
