[package]
name = "synth-explorer-layout-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "=0.3.99"
schemweave = { git = "https://github.com/cachanova/schemweave.git", rev = "0a2df14ff25d4989f522db2a532df40ad33cf9c4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.122"
